force-app/main/default/objects/Task_PM__c/fields/Business_hours__c.field-meta.xml
<CustomField>
    <fullName>Business_hours__c</fullName>
    <formula>ROUND( 9 * (
   (( 5 * FLOOR( ( End_Date__c - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( End_Date__c - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( End_Date__c - DATE( 1900,01,08 ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( Start_Date__c - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( Start_Date__c - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( Start_Date__c - DATE( 1900,01,08 ), 1) ) )
    )
   ) 
  )+1), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>