force-app/main/default/objects/Task_PM__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>