force-app/main/default/objects/Task_PM__c/fields/Total_Used_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Used_Hours__c</fullName>
    <label>Total Used Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>